<resources>
    <string name="app_name">ZZH</string>
    <string name="introduce_introduction">&#160; &#160;&#160; &#160;舒尔特表（Schulte Grid）通过动态的练习锻炼视神经末梢。心理学上用此表来研究和发展心理感知的速度，其中包括视觉定向搜索运动的速度。
                                          \n &#160; &#160;&#160; &#160;用来培养注意力集中、分配、控制能力；拓展视幅；加快视频；提高视觉的稳定性、辨别力、定向搜索能力。练习的时间越长，看表所需的时间会越短。随着练习的深入，
                                          眼球的末梢视觉能力提高，不仅初学者可以有效地拓展视幅，加快阅读节奏，锻炼眼睛快速认读；而且对于进入提高阶段之后，同时拓展纵横视幅，达到一目十行、一目一页非常有效。
    </string>

    <string name="practice">&#160; &#160;&#160; &#160;作用练习:  每表按字符顺序，迅速找全所有的字符，平均1个字符用1秒钟成绩为优良，即9格用9秒、16格用16秒、25格用25秒。
                                                          练习开始，达不到标准是非常正常的，切莫急躁。应该从9格开始练起。感觉熟练或比较轻松达到要求之后，再逐渐增加难度，千万不要因急于求成而使学习热情受挫。
                           \n &#160; &#160;&#160; &#160;使用方法:
                                                                       \n &#160; &#160;&#160; &#160; ①眼睛距表30～35厘米，视点自然放在表的中心；
                                                                       \n &#160; &#160;&#160; &#160; ②在所有字符全部清晰入目的前提下，按顺序(1～9，A～I，汉字应先熟悉原文顺序)找全所有字符，注意不要顾此失彼，因找一个字符而对其他字符视而不见；
                                                                       \n &#160; &#160;&#160; &#160; ③每看完一个表，眼睛稍做休息，或闭目，或做眼保健操，不要过分疲劳；
                                                                       \n &#160; &#160;&#160; &#160; ④练习初期不考虑记忆因素。每天看10个表。
    </string>


    <string name="Training_and_Application">&#160; &#160;&#160; &#160;训练应用中，找寻数字的过程对于训练者的视线搜索能力、视觉广度有很强的提高作用，这方面可以直接应用到快速阅读方面，在思维导图训练当中可以通过这样的快速视觉搜索让使用者迅速找出材料当中的关键词和关键内容，这其中又有对于注意力的选择、分配和转移方面的训练和提升。
        \n &#160; &#160;&#160; &#160;当执行一个明确的工作任务时，例如要求从1按顺序一直找到25这个简单的舒尔特表任务，在搜索一个数字n的同时，眼睛会同时关注其他的一个或几个数字，并将其大概位置输入值短时记忆系统，头脑中还需要为n+1这个数字，甚至为n+2、n+3的数字搜索任务进行注意力的分配，
                                                                 找到数字n后还需要立即进行注意力的转移，重新确定下一个搜索任务。
        \n &#160; &#160;&#160; &#160;随着搜索数字数量的升级，搜索每一数字所花费时间将逐渐增加，在维持高度注意力的同时，训练练习者的注意力的稳定性和持久性。
                                          \n &#160; &#160;&#160; &#160;我们可以由此看到，在这个简单的舒尔特表中，已经集成了对于注意力的稳定性（持久性）、广度、深度（集中能力）以及分配（任务和时间）和转移等几个方面的训练。
       \n &#160; &#160;&#160; &#160; 而在实践中我们通常建议儿童在舒尔特训练中与家长一同游戏，并每次记录时间，增加了竞技性和趣味性，这在解决注意力的唤醒和强化定向反应方面起到了一定的作用，使训练者更愿意积极投入训练。

    </string>

    <string name="upgrade">&#160; &#160;&#160; &#160;随着训练的升级，可以适当增加任务难度。例如，使用英文字母、汉字等。简述几种方案如下：
                                                                   \n &#160; &#160;&#160; &#160; 1、在格内数字是按奇数、偶数、质数、逆序等数列方式随机填入。数列方式可以根据训练者掌握知识的程度合理安排。
                                                                    如：（n+1）×2的数列方式，1，4，10，22，46…….
                                                                   \n &#160; &#160;&#160; &#160; 2、在格内随机填写英文字母，英文字母可以由一句英文组成，训练前需要让训练者熟悉此句英语。
                                                                   \n &#160; &#160;&#160; &#160; 3、在格内随机填写中文汉字，汉字内容可以是一句话，也可以是一首诗，甚至可以为了提高难度事先不告知训练者原文内容。
                                                                  \n &#160; &#160;&#160; &#160;  不断增加任务的难度，意味着在高度集中注意力的同时，练习者需要有效的分配注意力，及时转移注意力，以及处理双重甚至多重认出的能力，而文字内容的训练增加了逻辑推理的能力。
    </string>


    <string name="Be_careful">&#160; &#160;&#160; &#160;使用舒尔特表需要注意如下一些内容：
                                                   \n &#160; &#160;&#160; &#160;     1、舒尔特表训练鼓励家长与孩子一起竞技游戏或几个练习者之间的竞技式训练，以增强训练的趣味性和目的性；
                                                    \n &#160; &#160;&#160; &#160;    2、训练中要注意不同年龄段的能力，切忌急于求成，7-8岁儿童按顺序找5×5表上的数字的时间是30-50秒，平均40-42秒；12岁以上看一张图表的时间大约是25-30秒，平均1个字符用1秒钟成绩为优良；
                                                    \n &#160; &#160;&#160; &#160;    3、每天训练十次以上，每次记录训练的成绩，短期内训练成绩可能不太满意，是正常现象，切勿急躁，成绩稳定并轻松熟练后，再逐渐增加难度，循序渐进；
                                                    \n &#160; &#160;&#160; &#160;    4、使用软件训练，注意眼部休息；使用手制表格的，注意字迹清楚，并且需要经常更换表格内数字顺序，不能重复使用一张内容；
                                                    \n &#160; &#160;&#160; &#160;    5、增加数列、字母、文字的难度时，要向练习者说明规则。
    </string>

    <string name="advantage">&#160; &#160;&#160; &#160;取得好的学习、事业的发展,需要学会专注,学会有效地控制自己的身体和思维。就是要有控制自己注意力的能力。
            乐器学习是训练注意力的有效方法之一。利用舒尔特表加强注意力能让我们更好的学习。
        \n &#160; &#160;&#160; &#160;注意是一种意识活动,注意力是指人的心理活动指向和集中于某种事物的能力,是大脑对信息进行选择和过滤的能力,是一种有意识地只对某种信息进行加工而阻止其他无用信息进入的意识的加工能力。
        \n &#160; &#160;&#160; &#160;注意又分为无意注意和有意注意(选择性注意),侧重的注意力方面是主要针对有意注意这部分的。
        \n &#160; &#160;&#160; &#160;注意力同时也是智力的五个因素之一,智力的五个因素包括注意力、记忆力、观察力、想象力、思维力,而注意力是其他四种智力因素发生作用的先决条件,而舒尔特表就是完全的利用这些因素学习。
        \n &#160; &#160;&#160; &#160;有了注意力,人们才能集中精力去清晰地感知一定的事物,深入地思考一定的问题,而不被其他事物所干扰;没有注意力,人们的各种智力因素,观察、记忆、想象、和思维等将得不到一定的支持而失去控制。
       \n &#160; &#160;&#160; &#160; 而注意力不集中,通俗的说法就是大脑出现不能自控的多点兴奋,对于目标任务的主兴奋点进行削弱和分散,从而导致工作、学习效率低下。现代脑神经科学的研究结果表明,“注意”这一脑功能活动在大脑皮层中没有专门的功能！
    </string>
</resources>
